// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parameters typescript asyncapi should work with AsyncAPI that contains parameters 1`] = `
"
class SingleParameterParameters {
  private _firstParameter: string;

  constructor(input: {
    firstParameter: string,
  }) {
    this._firstParameter = input.firstParameter;
  }

  get firstParameter(): string { return this._firstParameter; }
  set firstParameter(firstParameter: string) { this._firstParameter = firstParameter; }


  /**
   * Realize the channel/topic with the parameters added to this class.
   */
  public getChannelWithParameters(channel: string) {
    channel = channel.replace(/\\{first_parameter\\}/g, this.firstParameter);
    return channel;
  }
  
  public static createFromChannel(msgSubject: string, channel: string, regex: RegExp): SingleParameterParameters {
    const parameters = new SingleParameterParameters({firstParameter: ''});
  const match = msgSubject.match(regex);
  const sequentialParameters: string[] = channel.match(/\\{(\\w+)\\}/g) || [];

  if (match) {
    const firstParameterMatch = match[sequentialParameters.indexOf('{first_parameter}')+1];
        if(firstParameterMatch && firstParameterMatch !== '') {
          parameters.firstParameter = firstParameterMatch as any
        } else {
          throw new Error(\`Parameter: 'firstParameter' is not valid in SingleParameterParameters. Aborting parameter extracting! \`) 
        }
  } else {
    throw new Error(\`Unable to find parameters in channel/topic, topic was \${channel}\`)
  }
  return parameters;
  }
}
export { SingleParameterParameters };"
`;

exports[`parameters typescript asyncapi should work with AsyncAPI that contains parameters 2`] = `
"import {EnumParameter} from './EnumParameter';
class MultipleParameterParameters {
  private _enumParameter: EnumParameter;
  private _constParameter: string;

  constructor(input: {
    enumParameter: EnumParameter,
    constParameter: string,
  }) {
    this._enumParameter = input.enumParameter;
    this._constParameter = input.constParameter;
  }

  get enumParameter(): EnumParameter { return this._enumParameter; }
  set enumParameter(enumParameter: EnumParameter) { this._enumParameter = enumParameter; }

  get constParameter(): string { return this._constParameter; }
  set constParameter(constParameter: string) { this._constParameter = constParameter; }


  /**
   * Realize the channel/topic with the parameters added to this class.
   */
  public getChannelWithParameters(channel: string) {
    channel = channel.replace(/\\{enum_parameter\\}/g, this.enumParameter);
    channel = channel.replace(/\\{const_parameter\\}/g, this.constParameter);
    return channel;
  }
  
  public static createFromChannel(msgSubject: string, channel: string, regex: RegExp): MultipleParameterParameters {
    const parameters = new MultipleParameterParameters({enumParameter: "a", constParameter: ''});
  const match = msgSubject.match(regex);
  const sequentialParameters: string[] = channel.match(/\\{(\\w+)\\}/g) || [];

  if (match) {
    const enumParameterMatch = match[sequentialParameters.indexOf('{enum_parameter}')+1];
        if(enumParameterMatch && enumParameterMatch !== '') {
          parameters.enumParameter = enumParameterMatch as any
        } else {
          throw new Error(\`Parameter: 'enumParameter' is not valid in MultipleParameterParameters. Aborting parameter extracting! \`) 
        }
  const constParameterMatch = match[sequentialParameters.indexOf('{const_parameter}')+1];
        if(constParameterMatch && constParameterMatch !== '') {
          parameters.constParameter = constParameterMatch as any
        } else {
          throw new Error(\`Parameter: 'constParameter' is not valid in MultipleParameterParameters. Aborting parameter extracting! \`) 
        }
  } else {
    throw new Error(\`Unable to find parameters in channel/topic, topic was \${channel}\`)
  }
  return parameters;
  }
}
export { MultipleParameterParameters };"
`;

exports[`parameters typescript asyncapi should work with AsyncAPI v2 that contains parameters and const parameters 1`] = `
"
class SingleParameterParameters {
  private _firstParameter: string;

  constructor(input: {
    firstParameter: string,
  }) {
    this._firstParameter = input.firstParameter;
  }

  get firstParameter(): string { return this._firstParameter; }
  set firstParameter(firstParameter: string) { this._firstParameter = firstParameter; }


  /**
   * Realize the channel/topic with the parameters added to this class.
   */
  public getChannelWithParameters(channel: string) {
    channel = channel.replace(/\\{first_parameter\\}/g, this.firstParameter);
    return channel;
  }
  
  public static createFromChannel(msgSubject: string, channel: string, regex: RegExp): SingleParameterParameters {
    const parameters = new SingleParameterParameters({firstParameter: ''});
  const match = msgSubject.match(regex);
  const sequentialParameters: string[] = channel.match(/\\{(\\w+)\\}/g) || [];

  if (match) {
    const firstParameterMatch = match[sequentialParameters.indexOf('{first_parameter}')+1];
        if(firstParameterMatch && firstParameterMatch !== '') {
          parameters.firstParameter = firstParameterMatch as any
        } else {
          throw new Error(\`Parameter: 'firstParameter' is not valid in SingleParameterParameters. Aborting parameter extracting! \`) 
        }
  } else {
    throw new Error(\`Unable to find parameters in channel/topic, topic was \${channel}\`)
  }
  return parameters;
  }
}
export { SingleParameterParameters };"
`;

exports[`parameters typescript asyncapi should work with AsyncAPI v2 that contains parameters and const parameters 2`] = `
"import {EnumParameter} from './EnumParameter';
class MultipleParameterParameters {
  private _enumParameter: EnumParameter;
  private _constParameter: 'test' = 'test';

  constructor(input: {
    enumParameter: EnumParameter,
  }) {
    this._enumParameter = input.enumParameter;
  }

  get enumParameter(): EnumParameter { return this._enumParameter; }
  set enumParameter(enumParameter: EnumParameter) { this._enumParameter = enumParameter; }

  get constParameter(): 'test' { return this._constParameter; }


  /**
   * Realize the channel/topic with the parameters added to this class.
   */
  public getChannelWithParameters(channel: string) {
    channel = channel.replace(/\\{enum_parameter\\}/g, this.enumParameter);
    channel = channel.replace(/\\{const_parameter\\}/g, this.constParameter);
    return channel;
  }
  
  public static createFromChannel(msgSubject: string, channel: string, regex: RegExp): MultipleParameterParameters {
    const parameters = new MultipleParameterParameters({enumParameter: "a"});
  const match = msgSubject.match(regex);
  const sequentialParameters: string[] = channel.match(/\\{(\\w+)\\}/g) || [];

  if (match) {
    const enumParameterMatch = match[sequentialParameters.indexOf('{enum_parameter}')+1];
        if(enumParameterMatch && enumParameterMatch !== '') {
          parameters.enumParameter = enumParameterMatch as any
        } else {
          throw new Error(\`Parameter: 'enumParameter' is not valid in MultipleParameterParameters. Aborting parameter extracting! \`) 
        }
  const constParameterMatch = match[sequentialParameters.indexOf('{const_parameter}')+1];
        if(constParameterMatch && constParameterMatch !== '') {
          parameters.constParameter = constParameterMatch as any
        } else {
          throw new Error(\`Parameter: 'constParameter' is not valid in MultipleParameterParameters. Aborting parameter extracting! \`) 
        }
  } else {
    throw new Error(\`Unable to find parameters in channel/topic, topic was \${channel}\`)
  }
  return parameters;
  }
}
export { MultipleParameterParameters };"
`;

exports[`parameters typescript openapi should use constrained property names and skip parseFromUrl without query parameters 1`] = `
"
interface GetDocumentParameters {
  documentId: string;
}
export { GetDocumentParameters };"
`;

exports[`parameters typescript openapi should use constrained property names and skip parseFromUrl without query parameters 2`] = `
"
interface GetTransactionsParameters {
  skip?: number;
  cvr?: string;
}
export { GetTransactionsParameters };"
`;

exports[`parameters typescript openapi should work with OpenAPI 2.0 that contains parameters 1`] = `
"
interface DeleteOrderParameters {
  /**
   * ID of the order that needs to be deleted
   */
  orderId: number;
}
export { DeleteOrderParameters };"
`;

exports[`parameters typescript openapi should work with OpenAPI 2.0 that contains parameters 2`] = `
"
interface DeletePetParameters {
  /**
   * Pet id to delete
   */
  petId: number;
}
export { DeletePetParameters };"
`;

exports[`parameters typescript openapi should work with OpenAPI 2.0 that contains parameters 3`] = `
"
interface DeleteUserParameters {
  /**
   * The name that needs to be deleted
   */
  username: string;
}
export { DeleteUserParameters };"
`;

exports[`parameters typescript openapi should work with OpenAPI 2.0 that contains parameters 4`] = `
"
interface FindPetsByStatusParameters {
  /**
   * Status values that need to be considered for filter
   */
  status: any[];
}
export { FindPetsByStatusParameters };"
`;

exports[`parameters typescript openapi should work with OpenAPI 2.0 that contains parameters 5`] = `
"
interface FindPetsByTagsParameters {
  /**
   * Tags to filter by
   */
  tags: any[];
}
export { FindPetsByTagsParameters };"
`;

exports[`parameters typescript openapi should work with OpenAPI 2.0 that contains parameters 6`] = `
"
interface GetOrderByIdParameters {
  /**
   * ID of pet that needs to be fetched
   */
  orderId: number;
}
export { GetOrderByIdParameters };"
`;

exports[`parameters typescript openapi should work with OpenAPI 2.0 that contains parameters 7`] = `
"
interface GetPetByIdParameters {
  /**
   * ID of pet to return
   */
  petId: number;
}
export { GetPetByIdParameters };"
`;

exports[`parameters typescript openapi should work with OpenAPI 2.0 that contains parameters 8`] = `
"
interface GetUserByNameParameters {
  /**
   * The name that needs to be fetched. Use user1 for testing.
   */
  username: string;
}
export { GetUserByNameParameters };"
`;

exports[`parameters typescript openapi should work with OpenAPI 2.0 that contains parameters 9`] = `
"
interface LoginUserParameters {
  /**
   * The user name for login
   */
  username: string;
  /**
   * The password for login in clear text
   */
  password: string;
}
export { LoginUserParameters };"
`;

exports[`parameters typescript openapi should work with OpenAPI 2.0 that contains parameters 10`] = `
"
interface UpdatePetWithFormParameters {
  /**
   * ID of pet that needs to be updated
   */
  petId: number;
}
export { UpdatePetWithFormParameters };"
`;

exports[`parameters typescript openapi should work with OpenAPI 2.0 that contains parameters 11`] = `
"
interface UpdateUserParameters {
  /**
   * name that need to be updated
   */
  username: string;
}
export { UpdateUserParameters };"
`;

exports[`parameters typescript openapi should work with OpenAPI 2.0 that contains parameters 12`] = `
"
interface UploadFileParameters {
  /**
   * ID of pet to update
   */
  petId: number;
}
export { UploadFileParameters };"
`;

exports[`parameters typescript openapi should work with OpenAPI 3.0 that contains parameters 1`] = `
"
interface DeleteOrderParameters {
  /**
   * ID of the order that needs to be deleted
   */
  orderId: string;
}
export { DeleteOrderParameters };"
`;

exports[`parameters typescript openapi should work with OpenAPI 3.0 that contains parameters 2`] = `
"
interface DeletePetParameters {
  /**
   * Pet id to delete
   */
  petId: number;
}
export { DeletePetParameters };"
`;

exports[`parameters typescript openapi should work with OpenAPI 3.0 that contains parameters 3`] = `
"
interface DeleteUserParameters {
  /**
   * The name that needs to be deleted
   */
  username: string;
}
export { DeleteUserParameters };"
`;

exports[`parameters typescript openapi should work with OpenAPI 3.0 that contains parameters 4`] = `
"import {StatusItem} from './StatusItem';
interface FindPetsByStatusParameters {
  /**
   * Status values that need to be considered for filter
   */
  status: StatusItem[];
}
export { FindPetsByStatusParameters };"
`;

exports[`parameters typescript openapi should work with OpenAPI 3.0 that contains parameters 5`] = `
"
interface FindPetsByTagsParameters {
  /**
   * Tags to filter by
   */
  tags: string[];
}
export { FindPetsByTagsParameters };"
`;

exports[`parameters typescript openapi should work with OpenAPI 3.0 that contains parameters 6`] = `
"
interface GetOrderByIdParameters {
  /**
   * ID of pet that needs to be fetched
   */
  orderId: number;
}
export { GetOrderByIdParameters };"
`;

exports[`parameters typescript openapi should work with OpenAPI 3.0 that contains parameters 7`] = `
"
interface GetPetByIdParameters {
  /**
   * ID of pet to return
   */
  petId: number;
}
export { GetPetByIdParameters };"
`;

exports[`parameters typescript openapi should work with OpenAPI 3.0 that contains parameters 8`] = `
"
interface GetUserByNameParameters {
  /**
   * The name that needs to be fetched. Use user1 for testing.
   */
  username: string;
}
export { GetUserByNameParameters };"
`;

exports[`parameters typescript openapi should work with OpenAPI 3.0 that contains parameters 9`] = `
"
interface LoginUserParameters {
  /**
   * The user name for login
   */
  username: string;
  /**
   * The password for login in clear text
   */
  password: string;
}
export { LoginUserParameters };"
`;

exports[`parameters typescript openapi should work with OpenAPI 3.0 that contains parameters 10`] = `
"
interface UpdatePetWithFormParameters {
  /**
   * ID of pet that needs to be updated
   */
  petId: number;
}
export { UpdatePetWithFormParameters };"
`;

exports[`parameters typescript openapi should work with OpenAPI 3.0 that contains parameters 11`] = `
"
interface UpdateUserParameters {
  /**
   * name that need to be deleted
   */
  username: string;
}
export { UpdateUserParameters };"
`;

exports[`parameters typescript openapi should work with OpenAPI 3.0 that contains parameters 12`] = `
"
interface UploadFileParameters {
  /**
   * ID of pet to update
   */
  petId: number;
}
export { UploadFileParameters };"
`;

exports[`parameters typescript openapi should work with OpenAPI 3.1 that contains parameters 1`] = `
"
interface DeleteOrderParameters {
  /**
   * ID of the order that needs to be deleted
   */
  orderId: string;
}
export { DeleteOrderParameters };"
`;

exports[`parameters typescript openapi should work with OpenAPI 3.1 that contains parameters 2`] = `
"
interface DeletePetParameters {
  /**
   * Pet id to delete
   */
  petId: number;
}
export { DeletePetParameters };"
`;

exports[`parameters typescript openapi should work with OpenAPI 3.1 that contains parameters 3`] = `
"
interface DeleteUserParameters {
  /**
   * The name that needs to be deleted
   */
  username: string;
}
export { DeleteUserParameters };"
`;

exports[`parameters typescript openapi should work with OpenAPI 3.1 that contains parameters 4`] = `
"import {StatusItem} from './StatusItem';
interface FindPetsByStatusParameters {
  /**
   * Status values that need to be considered for filter
   */
  status: StatusItem[];
}
export { FindPetsByStatusParameters };"
`;

exports[`parameters typescript openapi should work with OpenAPI 3.1 that contains parameters 5`] = `
"
interface FindPetsByTagsParameters {
  /**
   * Tags to filter by
   */
  tags: string[];
}
export { FindPetsByTagsParameters };"
`;

exports[`parameters typescript openapi should work with OpenAPI 3.1 that contains parameters 6`] = `
"
interface GetOrderByIdParameters {
  /**
   * ID of pet that needs to be fetched
   */
  orderId: number;
}
export { GetOrderByIdParameters };"
`;

exports[`parameters typescript openapi should work with OpenAPI 3.1 that contains parameters 7`] = `
"
interface GetPetByIdParameters {
  /**
   * ID of pet to return
   */
  petId: number;
}
export { GetPetByIdParameters };"
`;

exports[`parameters typescript openapi should work with OpenAPI 3.1 that contains parameters 8`] = `
"
interface GetUserByNameParameters {
  /**
   * The name that needs to be fetched. Use user1 for testing.
   */
  username: string;
}
export { GetUserByNameParameters };"
`;

exports[`parameters typescript openapi should work with OpenAPI 3.1 that contains parameters 9`] = `
"
interface LoginUserParameters {
  /**
   * The user name for login
   */
  username: string;
  /**
   * The password for login in clear text
   */
  password: string;
}
export { LoginUserParameters };"
`;

exports[`parameters typescript openapi should work with OpenAPI 3.1 that contains parameters 10`] = `
"
interface UpdatePetWithFormParameters {
  /**
   * ID of pet that needs to be updated
   */
  petId: number;
}
export { UpdatePetWithFormParameters };"
`;

exports[`parameters typescript openapi should work with OpenAPI 3.1 that contains parameters 11`] = `
"
interface UpdateUserParameters {
  /**
   * name that need to be deleted
   */
  username: string;
}
export { UpdateUserParameters };"
`;

exports[`parameters typescript openapi should work with OpenAPI 3.1 that contains parameters 12`] = `
"
interface UploadFileParameters {
  /**
   * ID of pet to update
   */
  petId: number;
}
export { UploadFileParameters };"
`;
